Correction de classes de documentation des cases à cocher html au format compact

--- a/src/sdg/bases/form/Checkbox/_base-checkbox.html
+++ b/src/sdg/bases/form/Checkbox/_base-checkbox.html
@@ -107,7 +107,7 @@
 </qc-doc-exemple>
 
 <qc-doc-exemple caption="Exemple d’un groupe de cases à cocher au petit format">
-  <fieldset aria-describedby="base-legend-compact" class="qc-fieldset">
+  <fieldset aria-describedby="base-legend-compact" class="qc-fieldset qc-compact">
     <legend id="base-legend-compact">Sélectionnez vos options</legend>
     <div class="qc-field-elements-flex qc-field-elements-flex-sm" style="--column-count: 1;">
       <label class="qc-check-row" for="base-Option 1-compact">
