--- a/src/sdg/bases/form/SelectionButton/_base-selection-button.html
+++ b/src/sdg/bases/form/SelectionButton/_base-selection-button.html
@@ -8,7 +8,7 @@
         
         <div class="qc-field-elements-tiled" style="--column-count: 2;">
             <label for="base-ex-radio-select-1-07wzbagv1j7-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-1-07wzbagv1j7-input" name="ex-radio-select" value="1" aria-required="false" aria-invalid="false" checked>
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-1-07wzbagv1j7-input" name="base-ex-radio-select" value="1" aria-required="false" aria-invalid="false" checked>
                 <span class="qc-check-text">
                     <span class="qc-check-label">Option 1</span>
                     <span class="qc-check-description">Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection.</span>
@@ -16,14 +16,14 @@
             </label>
 
             <label for="base-ex-radio-select-2-f6bvh8pbh5s-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-2-f6bvh8pbh5s-input" name="ex-radio-select" value="2" aria-required="false" aria-invalid="false">
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-2-f6bvh8pbh5s-input" name="base-ex-radio-select" value="2" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">Option 2</span>
                 </span>
             </label>
 
             <label for="base-ex-radio-select-3-yxtu495l8ba-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-3-yxtu495l8ba-input" name="ex-radio-select" value="3" aria-required="false" aria-invalid="false" disabled="">
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-3-yxtu495l8ba-input" name="base-ex-radio-select" value="3" aria-required="false" aria-invalid="false" disabled="">
                 <span class="qc-check-text">
                     <span class="qc-check-label">Option 3 (désactivée)</span>
                 </span>
@@ -38,7 +38,7 @@
 
         <div class="qc-field-elements-tiled" style="--column-count: 2;">
             <label class="qc-selection-button" for="base-exemple-checkbox-select10.c4slvplnh2-input">
-                <input id="base-exemple-checkbox-select10.c4slvplnh2-input" class="qc-compact" type="checkbox" value="1" name="exemple-checkbox-select" aria-required="false" aria-invalid="false">
+                <input id="base-exemple-checkbox-select10.c4slvplnh2-input" class="qc-compact" type="checkbox" value="1" name="base-exemple-checkbox-select" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">Option 1 </span>
                     <span class="qc-check-description">Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection.</span>
@@ -46,14 +46,14 @@
             </label>
 
             <label class="qc-selection-button" for="base-exemple-checkbox-select20.nf6c2k98c1-input">
-                <input id="base-exemple-checkbox-select20.nf6c2k98c1-input" class="qc-compact" type="checkbox" value="2" name="exemple-checkbox-select" aria-required="false" aria-invalid="false" checked>
+                <input id="base-exemple-checkbox-select20.nf6c2k98c1-input" class="qc-compact" type="checkbox" value="2" name="base-exemple-checkbox-select" aria-required="false" aria-invalid="false" checked>
                 <span class="qc-check-text">
                     <span class="qc-check-label">Option 2 cochée par défaut</span>
                 </span>
             </label>
 
             <label class="qc-selection-button" for="base-exemple-checkbox-select30.gia4dr5skyk-input">
-                <input id="base-exemple-checkbox-select30.gia4dr5skyk-input" class="qc-compact" type="checkbox" value="3" name="exemple-checkbox-select" disabled="" aria-required="false" aria-invalid="false">
+                <input id="base-exemple-checkbox-select30.gia4dr5skyk-input" class="qc-compact" type="checkbox" value="3" name="base-exemple-checkbox-select" disabled="" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">Option 3 désactivée</span>
                 </span>
@@ -68,37 +68,37 @@
         
         <div class="qc-field-elements-tiled-flex-row" style="--column-count: 1;">
             <label for="base-ex-radio-select-inline-1-gsv4etzzb9-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-1-gsv4etzzb9-input" name="ex-radio-select-inline" value="1" aria-required="false" aria-invalid="false" checked>
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-1-gsv4etzzb9-input" name="base-ex-radio-select-inline" value="1" aria-required="false" aria-invalid="false" checked>
                 <span class="qc-check-text">
                     <span class="qc-check-label">1</span>
                 </span>
             </label>
             <label for="base-ex-radio-select-inline-2-a6tphrc4nxs-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-2-a6tphrc4nxs-input" name="ex-radio-select-inline" value="2" aria-required="false" aria-invalid="false">
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-2-a6tphrc4nxs-input" name="base-ex-radio-select-inline" value="2" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">2</span>
                 </span>
             </label>
             <label for="base-ex-radio-select-inline-3-3j103yk0b8-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-3-3j103yk0b8-input" name="ex-radio-select-inline" value="3" aria-required="false" aria-invalid="false">
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-3-3j103yk0b8-input" name="base-ex-radio-select-inline" value="3" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">3</span>
                 </span>
             </label>
             <label for="base-ex-radio-select-inline-4-1cqqin7kwpn-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-4-1cqqin7kwpn-input" name="ex-radio-select-inline" value="4" aria-required="false" aria-invalid="false">
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-4-1cqqin7kwpn-input" name="base-ex-radio-select-inline" value="4" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">4</span>
                 </span>
             </label>
             <label for="base-ex-radio-select-inline-5-d1upuvhliij-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-5-d1upuvhliij-input" name="ex-radio-select-inline" value="5" aria-required="false" aria-invalid="false">
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-5-d1upuvhliij-input" name="base-ex-radio-select-inline" value="5" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">5</span>
                 </span>
             </label>
             <label for="base-ex-radio-select-inline-6-jm6gm6grsac-input" class="qc-selection-button">
-                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-6-jm6gm6grsac-input" name="ex-radio-select-inline" value="6" aria-required="false" aria-invalid="false">
+                <input class="qc-compact" type="radio" id="base-ex-radio-select-inline-6-jm6gm6grsac-input" name="base-ex-radio-select-inline" value="6" aria-required="false" aria-invalid="false">
                 <span class="qc-check-text">
                     <span class="qc-check-label">6</span>
                 </span>
