Ajout d'attribut text-align dans ToggleSwitch

--- a/public/index.html
+++ b/public/index.html
@@ -2336,6 +2336,7 @@
         id="switch-group"
         legend="Préférences de notifications de messages"
         justified
+        text-align="end"
     >
         <qc-toggle-switch
                 id="nouveaux-messages"
