--- a/public/index.html
+++ b/public/index.html
@@ -2336,7 +2336,6 @@
         id="switch-group"
         legend="Préférences de notifications de messages"
         justified
-        text-align="end"
     >
         <qc-toggle-switch
                 id="nouveaux-messages"
@@ -2349,6 +2348,28 @@
         ></qc-toggle-switch>
         <qc-toggle-switch
                 id="messages-supprimes"
+                label="Messages supprimés (indisponible)"
+                disabled
+        ></qc-toggle-switch>
+    </qc-toggle-switch-group>
+
+    <qc-toggle-switch-group
+            id="switch-group-end"
+            legend="Préférences de notifications de messages"
+            justified
+            text-align="end"
+    >
+        <qc-toggle-switch
+                id="nouveaux-messages-end"
+                label="Nouveaux messages"
+                checked
+        ></qc-toggle-switch>
+        <qc-toggle-switch
+                id="modifications-messages-end"
+                label="Modifications de messages"
+        ></qc-toggle-switch>
+        <qc-toggle-switch
+                id="messages-supprimes-end"
                 label="Messages supprimés (indisponible)"
                 disabled
         ></qc-toggle-switch>
