Mise à jour navigation

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,8 @@
     <li><a href="#base-radio-button">Boutons radio</a></li>
     <li><a href="#base-checkbox">Cases à cocher</a></li>
     <li><a href="#base-selection-button">Boutons de sélection</a></li>
-    <li><a href="#base-champ-texte">Champ texte</a></li>
+    <li><a href="#base-textfield">Champ texte</a></li>
+    <li><a href="#base-search-input">Champ de recherche</a></li>
   </ul>
 </nav>
 </div>
@@ -3908,7 +3909,7 @@
     </table>
 </div>
 
-    <h2 id="base-champ-texte">Champ texte</h2>
+    <h2 id="base-textfield">Champ texte</h2>
 
 <qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
     <form id="formulaire-base-champs-textes" novalidate>
@@ -4166,6 +4167,8 @@
     </table>
 </div>
 
+
+    <h2 id="base-search-input">Champ de recherche</h2>
 
 
   </div>
