--- a/src/sdg/bases/form/TextField/_base-textField.html
+++ b/src/sdg/bases/form/TextField/_base-textField.html
@@ -1,4 +1,4 @@
-<h2 id="base-champ-texte">Champ texte</h2>
+<h2 id="base-textfield">Champ texte</h2>
 
 <qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
     <form id="formulaire-base-champs-textes" novalidate>
