--- a/src/sdg/bases/form/Select/_select.html
+++ b/src/sdg/bases/form/Select/_select.html
@@ -1,2 +1,49 @@
 <h2>Liste déroulante (select)</h2>
-<p>À compléter…</p>
+
+<h3>Exemples</h3>
+
+<qc-doc-exemple caption="Exemple de listes déroulantes en sélection dans différents états">
+    <div class="qc-textfield-container">
+        <label for="select-single-choice">Choix unique</label>
+        <select id="select-single-choice" class="qc-dropdown-list qc-dropdown-list-md">
+            <option value="1" selected>Option 1</option>
+            <option value="2">Option 2</option>
+            <option value="3">Option 3</option>
+            <option value="4">Option 4</option>
+            <option value="5">Option 5</option>
+            <option value="6">Option 6</option>
+            <option value="7">Option 7</option>
+            <option value="8">Option 8</option>
+            <option value="9">Option 9</option>
+            <option value="10">Option 10</option>
+            <option value="11">Option 11</option>
+            <option value="12">Option 12</option>
+            <option value="13">Option 13</option>
+            <option value="14">Option 14</option>
+            <option value="15">Option 15</option>
+            <option value="16" disabled>Option 16 (désactivée)</option>
+        </select>
+    </div>
+
+    <div class="qc-textfield-container">
+        <label for="select-single-choice-disabled" class="qc-disabled">Désactivé</label>
+        <select id="select-single-choice-disabled" class="qc-dropdown-list qc-dropdown-list-md" disabled>
+            <option value="1" selected>Option 1</option>
+            <option value="2">Option 2</option>
+            <option value="3">Option 3</option>
+            <option value="4">Option 4</option>
+            <option value="5">Option 5</option>
+            <option value="6">Option 6</option>
+            <option value="7">Option 7</option>
+            <option value="8">Option 8</option>
+            <option value="9">Option 9</option>
+            <option value="10">Option 10</option>
+            <option value="11">Option 11</option>
+            <option value="12">Option 12</option>
+            <option value="13">Option 13</option>
+            <option value="14">Option 14</option>
+            <option value="15">Option 15</option>
+            <option value="16" disabled>Option 16 (désactivée)</option>
+        </select>
+    </div>
+</qc-doc-exemple>
