Ajout du composant "Champ de recherche" et mise à jour de la navigation et de la documentation

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
     <li><a href="#checkbox">Cases à cocher</a></li>
     <li><a href="#selection-button">Boutons de sélection</a></li>
     <li><a href="#toggle-switch">Commutateur</a></li>
+    <li><a href="#search-input">Champ de recherche</a></li>
     <li><a href="#textfield">Champ texte</a></li>
     <li><a href="#dropdown-list">Liste déroulante</a></li>
   </ul>
@@ -2461,6 +2462,16 @@
     </tr>
     </tbody>
 </table>
+    <h2 id="search-input">Champ de recherche</h2>
+<h3>Exemples</h3>
+
+<qc-doc-exemple>
+    <qc-search-input
+            placeholder="Rechercher un article"
+            aria-label="Rechercher un article"
+            left-icon
+    ></qc-search-input>
+</qc-doc-exemple>
     <h2 id="textfield">Champ texte</h2>
 
 <p>Le champ texte est un espace dans lequel est saisie une information qui tient sur une ou plusieurs lignes de texte.
