Tentative de correction de l'orientation de chevron de <select>

--- a/src/sdg/bases/form/Select/_select.html
+++ b/src/sdg/bases/form/Select/_select.html
@@ -43,7 +43,7 @@
             <option value="13">Option 13</option>
             <option value="14">Option 14</option>
             <option value="15">Option 15</option>
-            <option value="16" disabled>Option 16 (désactivée)</option>
+            <option value="16" >Option 16</option>
         </select>
     </div>
 </qc-doc-exemple>
