Bandeau PIV - ajustement des exemples

--- a/public/index.html
+++ b/public/index.html
@@ -1146,7 +1146,7 @@
                 caption="Exemple de personnalisation des liens du bandeau d’entête PIV"
 >
   <qc-piv-header
-          title-text="Nom du site"
+          title-text="Titre du site ou du service"
           title-url="https://www.quebec.ca/"
           alt-logo="Accédez à Québec.ca"
   >
@@ -1167,7 +1167,7 @@
 
 >
   <div id="pivEnteteExempleRecherchePersonnalisee">
-    <qc-piv-header title-text="Nom du site"
+    <qc-piv-header title-text="Titre du site ou du service"
                    alt-logo="Accédez à Québec.ca"
                    enable-search="true"
                    show-search="true"
