--- a/public/index.html
+++ b/public/index.html
@@ -2323,7 +2323,7 @@
         ></qc-toggle-switch>
         <qc-toggle-switch
                 id="switch-status-2"
-                label="Afficher l'état du commutateur à la console"
+                label="Libellé aligné sur la droite (afficher au format mobile pour voir la différence)"
                 text-align="end"
         ></qc-toggle-switch>
     </div>
@@ -2341,7 +2341,6 @@
         id="switch-group"
         legend="Préférences de notifications de messages"
         justified
-        width="100%"
     >
         <qc-toggle-switch
                 id="nouveaux-messages"
@@ -2479,12 +2478,6 @@
             Alignement du texte des libellés des commutateurs
             <br> N.B. : Cette valeur a priorité sur celle des commutateurs du groupe.
         </td>
-    </tr>
-    <tr>
-        <td>width</td>
-        <td>"full", "100% ou "fit-content"</td>
-        <td>"fit-content"</td>
-        <td>Largeur que prend le groupe de commutateurs dans son contenant</td>
     </tr>
     </tbody>
 </table>
