--- a/public/index.html
+++ b/public/index.html
@@ -1032,7 +1032,7 @@
 
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemple de bouton avec une image personnalisée en base64.">
+<qc-doc-exemple caption="Exemple de bouton avec une image personnalisée.">
     <qc-button
             variant="primary"
             label="Questions"
