--- a/public/index.html
+++ b/public/index.html
@@ -2435,6 +2435,12 @@
         <td>"start"</td>
         <td>Alignement du texte du libellé</td>
     </tr>
+    <tr>
+        <td>max-width</td>
+        <td>"fit-content", "[x]px", "[x]rem", "[x]em, "[x]%"</td>
+        <td>"fit-content"</td>
+        <td>Largeur maximale des commutateurs dans le groupe</td>
+    </tr>
     </tbody>
 </table>
 
