--- a/public/index.html
+++ b/public/index.html
@@ -2435,12 +2435,6 @@
         <td>"start"</td>
         <td>Alignement du texte du libellé</td>
     </tr>
-    <tr>
-        <td>max-width</td>
-        <td>"fit-content", "[x]px", "[x]rem", "[x]em, "[x]%"</td>
-        <td>"fit-content"</td>
-        <td>Largeur maximale des commutateurs dans le groupe</td>
-    </tr>
     </tbody>
 </table>
 
@@ -2484,6 +2478,12 @@
             Alignement du texte des libellés des commutateurs
             <br> N.B. : Cette valeur a priorité sur celle des commutateurs du groupe.
         </td>
+    </tr>
+    <tr>
+        <td>max-width</td>
+        <td>"fit-content", "[x]px", "[x]rem", "[x]em, "[x]%", où [x] est un nombre</td>
+        <td>"fit-content"</td>
+        <td>Largeur maximale des commutateurs dans le groupe</td>
     </tr>
     </tbody>
 </table>
