--- a/src/sdg/bases/form/Select/_select.html
+++ b/src/sdg/bases/form/Select/_select.html
@@ -47,8 +47,8 @@
         </select>
     </div>
 
-    <qc-select>
-        <select id="select-single-choice-foo" class="qc-dropdown-list qc-dropdown-list-md">
+    <qc-select multiple>
+        <select multiple id="select-single-choice-foo" class="qc-dropdown-list qc-dropdown-list-md">
             <option value="1" selected>Option 1</option>
             <option value="2">Option 2</option>
             <option value="3">Option 3</option>
