Déplacement de la liste d'icônes dans la doc

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
   <h2 class="qc-h4">Bases</h2>
   <ul>
     <li><a href='#couleurs'>Couleurs</a></li>
+    <li><a href="#icon-list">Icônes</a></li>
     <li><a href='#grille'>Grille horizontale</a></li>
     <li><a href='#figures'>Figures</a></li>
     <li><a href='#liens'>Liens</a></li>
@@ -196,6 +197,104 @@
     <qc-color-doc token="purple"
                   title="Violet"
     ></qc-color-doc>
+</section>
+
+    <hr />
+    <section id="icon-list">
+  <h2>Icônes</h2>
+
+  <div class="table-overflow">
+    <table class="qc-table qc-striped component-attributes-description">
+      <thead>
+      <tr>
+        <th>Nom</th>
+        <th>Aperçu</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td>arrow-up-white</td>
+        <td><qc-icon type="arrow-up-white"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>chevron-blue</td>
+        <td><qc-icon type="chevron-blue"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>chevron-white</td>
+        <td><qc-icon type="chevron-white"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>clipboard</td>
+        <td><qc-icon type="clipboard"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>error</td>
+        <td><qc-icon type="error"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>error-white</td>
+        <td><qc-icon type="error-white"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>external-link</td>
+        <td><qc-icon type="external-link"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>information</td>
+        <td><qc-icon type="information"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>information-white</td>
+        <td><qc-icon type="information-white"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>linkedin</td>
+        <td><qc-icon type="linkedin"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>loupe-piv-droite</td>
+        <td><qc-icon type="loupe-piv-droite"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>loupe-piv-fonce</td>
+        <td><qc-icon type="loupe-piv-fonce"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>minus</td>
+        <td><qc-icon type="minus"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>plus</td>
+        <td><qc-icon type="plus"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>question-mark</td>
+        <td><qc-icon type="question-mark"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>success</td>
+        <td><qc-icon type="success"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>success-white</td>
+        <td><qc-icon type="success-white"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>warning</td>
+        <td><qc-icon type="warning"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>xclose-blue</td>
+        <td><qc-icon type="xclose-blue"></qc-icon></td>
+      </tr>
+      <tr>
+        <td>xclose-white</td>
+        <td><qc-icon type="xclose-white"></qc-icon></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </section>
 
     <hr/>
@@ -3080,102 +3179,6 @@
     </tbody>
   </table>
 </div>
-
-<h4>Icônes disponibles</h4>
-<div class="table-overflow">
-  <table class="qc-table qc-striped component-attributes-description">
-    <thead>
-    <tr>
-      <th>Nom</th>
-      <th>Aperçu</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td>arrow-up-white</td>
-      <td><qc-icon type="arrow-up-white"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>chevron-blue</td>
-      <td><qc-icon type="chevron-blue"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>chevron-white</td>
-      <td><qc-icon type="chevron-white"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>clipboard</td>
-      <td><qc-icon type="clipboard"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>error</td>
-      <td><qc-icon type="error"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>error-white</td>
-      <td><qc-icon type="error-white"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>external-link</td>
-      <td><qc-icon type="external-link"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>information</td>
-      <td><qc-icon type="information"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>information-white</td>
-      <td><qc-icon type="information-white"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>linkedin</td>
-      <td><qc-icon type="linkedin"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>loupe-piv-droite</td>
-      <td><qc-icon type="loupe-piv-droite"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>loupe-piv-fonce</td>
-      <td><qc-icon type="loupe-piv-fonce"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>minus</td>
-      <td><qc-icon type="minus"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>plus</td>
-      <td><qc-icon type="plus"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>question-mark</td>
-      <td><qc-icon type="question-mark"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>success</td>
-      <td><qc-icon type="success"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>success-white</td>
-      <td><qc-icon type="success-white"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>warning</td>
-      <td><qc-icon type="warning"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>xclose-blue</td>
-      <td><qc-icon type="xclose-blue"></qc-icon></td>
-    </tr>
-    <tr>
-      <td>xclose-white</td>
-      <td><qc-icon type="xclose-white"></qc-icon></td>
-    </tr>
-    </tbody>
-  </table>
-</div>
-
-
 
 
     <hr />
