--- a/public/index.html
+++ b/public/index.html
@@ -2419,26 +2419,33 @@
 <qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
   <form id="formulaire-champs-textes">
     <qc-textfield
-            name="text-sm"
             label="Entrez votre âge"
             size="sm"
-            placeholder="25"
-    ></qc-textfield>
+    >
+      <input type="text"
+             name="text-sm"
+             placeholder="25" />
+    </qc-textfield>
 
     <qc-textfield
-            name="text-md"
             label="Entrez votre code postal"
             size="md"
-            placeholder="ex : G1A 1A1"
-    ></qc-textfield>
+    >
+      <input type="text"
+             name="text-md"
+             placeholder="ex : G1A 1A1"
+      />
+    </qc-textfield>
 
     <div class="qc-textfield-row">
       <qc-textfield
-              name="telephone"
               label="Téléphone"
               size="md"
               placeholder="(123) 456-7890"
-      ></qc-textfield>
+      ><input type="text"
+              name="text-md"
+              placeholder="ex : G1A 1A1"
+      /></qc-textfield>
 
       <qc-textfield
               name="poste"
